Restore cross-platform JavaFX packaging
The dependency configuration selects only the build machine's JavaFX
native libraries. The resulting fat JAR cannot start on the other two
operating systems required by the course smoke test.

Package the Windows, macOS, and Linux libraries prescribed by the
JavaFX tutorial. Grant native access in the executable manifest and
relaunch only when a named JavaFX module needs the equivalent JVM
option, keeping bare java -jar startup warning-free on the prescribed
macOS JDK.